--- a/css/index.css
+++ b/css/index.css
@@ -925,6 +925,12 @@ html,body {
 .history-today-list i {
     margin-right: 12px;
 }
+.history-today-list li a {
+	width: 300px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
 .rili-ad {
     width: 1200px;
     margin: 10px auto;
