--- a/css/index.css
+++ b/css/index.css
@@ -132,13 +132,14 @@ html,body {
 .rili-main .cal-right-weather-item .temper {
 	width: 50%;
 	height: 40px;
+	text-align: center;
 }
 .rili-main .cal-right-weather-item .desc img {
 	width: 100%;
 	height: 100%;
 }
 
-.rili-main .cal-right-weather-item .top,
+.rili-main .cal-right-weather-item .temper .lpt-top,
 .rili-main .cal-right-weather-item .bottom {
 	display: block;
 	text-align: center;
@@ -263,7 +264,7 @@ html,body {
 	color: #333;
 }
 .rili-main .cal-popup-new .cal-dayTil span {
-	margin-right: 60px;
+	margin-right: 50px;
 }
 .rili-main .cal-popup-new .cal-dayTil span.no-margin {
 	margin: 0;
@@ -397,7 +398,7 @@ html,body {
 	float: left;
 	margin-right: 20px;
 }
-.rili-main .cal-popup-new .cal-tip-text:hover {
+.rili-main .cal-popup-new a.cal-tip-text:hover {
 	color: #296bd3;
 }
 .rili-main .cal-popup-new .cal-tip-text .red {
@@ -650,6 +651,7 @@ html,body {
 	background: #fff;
 	cursor: pointer;
 	display: none;
+	z-index: 9;
 }
 .rili-main .constellation-info {
 	margin-top: 18px;
@@ -874,6 +876,13 @@ html,body {
 }
 .new-content .news-list-1 li a {
     font-size: 16px;
+    color: #333;
+}
+.new-content .news-list-1 li a:hover {
+	color: #296bd3;
+}
+.new-content .news-list-1 li a:visited {
+	color: #686868;
 }
 .news-list-2 {
     padding-top: 10px;
@@ -881,8 +890,15 @@ html,body {
 .new-content .news-list-2 li {
     display: block;
 }
-.news-list-2 a {
-    color: #666;
+.new-content .news-list-2 li a {
+    color: #333;
+    font-size: 16px;
+}
+.new-content .news-list-2 li a:hover {
+	color: #296bd3;
+}
+.new-content .news-list-2 li a:visited {
+	color: #686868;
 }
 .new-headline-right-img-box {
     overflow: hidden;
@@ -930,6 +946,13 @@ html,body {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+	color: #333;
+}
+.history-today-list li a:hover {
+	color: #296bd3;
+}
+.history-today-list li a:visited {
+	color: #686868;
 }
 .rili-ad {
     width: 1200px;
