--- a/css/index.css
+++ b/css/index.css
@@ -449,8 +449,10 @@ html,body {
 	border-left: 2px solid #e0e0e0;
 }
 .rili-main .cal-popup-new .custom-sel .custom-center {
-	margin: 0px 24px;
+	margin-right: 24px;
+	margin-left: 24px;
 	position: relative;
+
 }
 
 .rili-main .cal-popup-new .custom-sel:hover .custom-dwn {
@@ -788,6 +790,7 @@ html,body {
 	top: 13px;*/
     width: 10px; height: 6px;
     margin-left: 5px;
+    vertical-align: middle;
     background-position: -138px -90px;
 }
 
